<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RWLBActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1_rw"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_rw_taskname" />

        <TextView
            android:id="@+id/textView2_rw"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_rw_tasktype" />

        <TextView
            android:id="@+id/textView3_rw"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_rw_taskdesc" />

        <TextView
            android:id="@+id/textView4_rw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_rw_taskstatus" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1_rw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null" 
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp" >

        <Button
            android:id="@+id/button1_rw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bj_menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2_rw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bj_back" />
    </LinearLayout>

</LinearLayout>