<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BJActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1_bj"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_bj_number" />

        <TextView
            android:id="@+id/textView2_bj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bj_border_ivory"
            android:gravity="center"
            android:text="@string/title_bj_remark" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1_bj"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null" 
        android:listSelector="@android:color/transparent"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp" >

        <Button
            android:id="@+id/button1_bj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bj_menu" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2_bj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bj_back" />
    </LinearLayout>

</LinearLayout>