<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CJActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1_cj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_CJ_Photograph" />

        <TextView
            android:id="@+id/textView1_cj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           />

        <Button
            android:id="@+id/button2_cj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_CJ_finish" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listView1_cj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2_cj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:gravity="center"
            android:text="@string/btn_CJ_remark" />

        <EditText
            android:id="@+id/editText1_cj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</LinearLayout>