<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/by"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#92b5e6"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login_user_name"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner1_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView3_user_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login_user_pwd"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView3_task_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login_task_num"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner2_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <Button
                android:id="@+id/button1_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cd" />

            <Button
                android:id="@+id/button2_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/qx" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>